# django_json_logging

./: .pre-commit-config.yaml  Pipfile  README.md  mypy.ini  pyproject.toml
demo-project/: requirements.txt
demo-project/src/demo/: settings.py  urls.py  views.py
django_json_logging/: __init__.py  context.py  logger.py  logging.py  middleware.py  request_context.py
