[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "django_json_logging"
author = "Vicheslav Krachkov"
author-email = "vskrachkov@gmail.com"
home-page = "https://github.com/vskrachkov/django_json_logging"
requires = [
    "django>=2.2",
    "json-log-formatter>=0.3.1, <=0.4.0",
]
requires-python = ">=3.8"
description-file="README.md"